# khimoo.io

./: 404.html  build-info.json  flake.nix  index.html  index.html.br  justfile  khimoo-portfolio-254685da78fd6b0_bg.wasm  khimoo-portfolio-26e3d6638ba3d2ce.js  khimoo-portfolio-26e3d6638ba3d2ce_bg.wasm  khimoo-portfolio-2ab3b401ce818d11.js  khimoo-portfolio-2ab3b401ce818d11_bg.wasm  khimoo-portfolio-2dc87670bc5ca7df.js  khimoo-portfolio-2dc87670bc5ca7df_bg.wasm  khimoo-portfolio-36c2231e4e4e596b.js  khimoo-portfolio-36c2231e4e4e596b_bg.wasm  khimoo-portfolio-3d97e586f000a7dd.js  khimoo-portfolio-3d97e586f000a7dd_bg.wasm  khimoo-portfolio-4323e64e4a816b7d.js  khimoo-portfolio-4323e64e4a816b7d_bg.wasm  khimoo-portfolio-487d3126e503edcb_bg.wasm  khimoo-portfolio-4fdbe703699f889b_bg.wasm  khimoo-portfolio-5193403d51812cb5.js  khimoo-portfolio-5193403d51812cb5_bg.wasm  khimoo-portfolio-60cec0d3a8fa6fcf_bg.wasm  khimoo-portfolio-640603bfd44aafd1.js  khimoo-portfolio-640603bfd44aafd1_bg.wasm  khimoo-portfolio-64af39b16643ef1e_bg.wasm  khimoo-portfolio-69365dac84167bca.js  khimoo-portfolio-69365dac84167bca_bg.wasm  khimoo-portfolio-7041fb4e83066ccc.js  khimoo-portfolio-7041fb4e83066ccc_bg.wasm  khimoo-portfolio-84aa303baff2214.js  khimoo-portfolio-84aa303baff2214_bg.wasm  khimoo-portfolio-9892536b14eec69b.js  khimoo-portfolio-9892536b14eec69b_bg.wasm  khimoo-portfolio-a4788b71535d0c4.js  khimoo-portfolio-a4788b71535d0c4_bg.wasm  khimoo-portfolio-a7cbd2dff3348383.js  khimoo-portfolio-a7cbd2dff3348383_bg.wasm  khimoo-portfolio-b15e979114648b85.js  (+26 more)
_layouts/: default.html
data/: articles.json  link-graph.json  validation-report.json  validation-report.txt
docs/: index.md
khimoo-portfolio/: Cargo.toml  Trunk.toml  index.html
khimoo-portfolio/articles/: about-khimoo.md  async-patterns.md  broken-link-test.md  hello.md  rust-async.md  tokio-basics.md  web-development.md
khimoo-portfolio/data/: articles.json  link-graph.json
khimoo-portfolio/src/: app.rs  article_processing.rs  components.rs  hooks.rs  lib.rs  main.rs  physics.rs  physics_sim.rs.bak  types.rs
khimoo-portfolio/src/home/: app.rs  article.rs  article_manager.rs  components.rs  data_loader.rs  header.rs  mod.rs  physics_sim.rs  types.rs  viewport.rs
khimoo-portfolio_bakk/: Cargo.toml
khimoo-portfolio_bakk/src/: lib.rs  physics.rs
mouse_cood/: Cargo.toml
(+30 files in other folders)
