[package]
name = "khimoo-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
rapier2d = { version = "0.26", features = [ "simd-stable" ] }
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlElement", "HtmlDivElement", "Element", "DomRect"] }
yew-hooks = {version = "0.3" }
yew-router = { version = "0.18" }
