[package]
name = "khimoo-portfolio"
version = "0.1.0"
edition = "2021"

# Main application
[[bin]]
name = "khimoo-portfolio"
path = "src/main.rs"

# Article processing tools
[[bin]]
name = "process-articles"
path = "src/bin/process_articles.rs"

[[bin]]
name = "validate-links"
path = "src/bin/validate_links.rs"

[[bin]]
name = "generate-link-graph"
path = "src/bin/generate_link_graph.rs"

[dependencies]
# Web framework
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = ["HtmlElement", "HtmlDivElement", "Element", "DomRect", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
yew-hooks = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
futures = "0.3"

# Physics
rapier2d = { version = "0.26", features = ["simd-stable"] }

# Markdown processing
pulldown-cmark = "0.10"

# CLI tools dependencies
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-front-matter = "0.1"
serde_yaml = "0.9"
walkdir = "2.3"
regex = "1.7"
notify = "6.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
tempfile = "3.8"
